fixed spacing issue for post and bottom nav being overlapped by carousel

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -63,6 +63,7 @@
 	text-decoration: none;
 	background-color: #00354d;
 	align-items: center;
+	z-index: 2;
 	ul {
 		width: 375px;
 
